container naming standards, use add endpoint to create running server containers, using image name in dockercompose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: ./load_balancer/Dockerfile
+    image: myproject_load_balancer
     ports:
       - "5000:5000"
     volumes:
@@ -15,7 +16,8 @@ services:
   server1:
     build:
       context: ./myserver
-    container_name: server1
+    image: myproject_server
+    container_name: server_1
     ports:
       - "5001:5000"
     environment:
@@ -24,7 +26,8 @@ services:
   server2:
     build:
       context: ./myserver
-    container_name: server2
+    image: myproject_server
+    container_name: server_2
     ports:
       - "5002:5000"
     environment:
@@ -33,7 +36,8 @@ services:
   server3:
     build:
       context: ./myserver
-    container_name: server3
+    image: myproject_server
+    container_name: server_3
     ports:
       - "5003:5000"
     environment:
